# autonomous-academic-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  ROUDMAP.md  codex-recovery.patch  pyproject.toml  workspace.toml
academic_engine/: __init__.py  __main__.py  agent_chat.py  autonomous_daemon.py  autonomous_launchd.py  autonomous_planner.py  autonomous_policy.py  autonomous_runner.py  autonomous_runtime_errors.py  autonomous_runtime_store.py  autonomous_scheduler.py  bot.py  chat_wrapper.py  dissertation_artifacts.py  dissertation_contour.py  docx_conformance.py  docx_preview.py  engine_service.py  executors.py  export_explain.py  finalization_engine.py  guarded_prose.py  job_inspector.py  job_queue.py  launchd_service.py  one_shot.py  openrouter_qualification.py  ops_alerts.py  orchestrator.py  orchestrator_launch.py  orchestrator_runtime.py  orchestrator_support.py  orchestrator_workspace.py  provider_write_contract.py  quality_advisories.py  repair_kernel.py  resource_guards.py  role_result_contract.py  runtime_index.py  state.py  (+6 more)
agents/: academic-citation-checker.md  academic-counterargument-critic.md  academic-draft-writer.md  academic-evidence-cartographer.md  academic-finalizer.md  academic-intake.md  academic-repair-orchestrator.md  academic-source-acquirer.md  academic-source-verifier.md  academic-submission-evaluator.md  academic-workflow-orchestrator.md  argument-critic.md  citation-checker.md  draft-writer.md  research-synthesizer.md  source-verifier.md  structure-architect.md  style-editor.md  (+2 more)
articles/: README.md
(+372 files in other folders)
