[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-academic-workspace"
version = "0.1.0"
description = "Юридически-академический CLI workspace: work-aware orchestration, launchers and deterministic quality gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "pytest>=8.0",
  "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
include = ["telegram_console*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["telegram_console", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# tests/test_telegram_console.py: very long integration module; E501 deferred (engineering audit 2026-04-19).
[tool.ruff.lint.per-file-ignores]
"tests/test_telegram_console.py" = ["E501"]
